--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,13 @@
 {
     "name": "qlimix/time",
-    "type": "package",
-    "license": "LGPL-3.0-only",
+    "type": "library",
+    "description": "An interface to lapse time",
+    "license": "MIT",
+    "keywords": [
+        "qlimix",
+        "time",
+        "lapse"
+    ],
     "authors": [
         {
             "name": "frank",
@@ -21,19 +27,7 @@
     "config": {
         "sort-packages": true
     },
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "git@bitbucket.org:qlimix/code-standard.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@bitbucket.org:qlimix/codesniffer-standard.git"
-        }
-    ],
-    "minimum-stability": "dev",
-    "prefer-stable": true,
     "require-dev": {
-        "qlimix/code-standard": "dev-master"
+        "qlimix/code-standard": "^1.0"
     }
 }
